# portal-software

./: .gitignore  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml  docker.yml
docker/: embedded-dev.nix
emulator/: Cargo.toml  gui.fl
emulator/src/: gui.rs
emulator/src/tests/: init.rs  mod.rs
emulator/src/utils/: model.rs
firmware/: Cargo.toml  default.nix
firmware/.cargo/: config  config.toml
firmware/src/: bitcoin_utils.rs  checkpoint.rs  error.rs  main.rs
firmware/src/handlers/: bitcoin.rs  idle.rs  init.rs  mod.rs
gui/src/: lib.rs
model/: Cargo.toml
model/src/: emulator.rs  encryption.rs  lib.rs  reg.rs  write_buffer.rs
sdk/: Cargo.toml
sdk/libportal-android/: README.md  gradle.properties
sdk/libportal-android/lib/: build.gradle.kts
sdk/libportal-ios/: libportal-ios.podspec
sdk/libportal-react-native/: CONTRIBUTING.md  README.md  package.json  tsconfig.json
sdk/libportal-react-native/android/: build.gradle
sdk/libportal-react-native/android/src/main/java/xyz/twenty_two/react_native/: LibportalReactNativeModule.kt
sdk/libportal-react-native/example/: README.md  package.json
sdk/libportal-react-native/example/src/: App.tsx
sdk/libportal-react-native/ios/: LibportalReactNative.mm  LibportalReactNative.swift
sdk/libportal-react-native/src/: index.tsx
sdk/src/: inner_logic.rs  lib.rs
