[package]
name = "sdk"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "portal"

[dependencies]
async-std = "1.12"
futures = "0.3.28"
log = "0.4"
base64 = "0.13.0"
rand = "0.8.5"
miniscript = "12.1.0"

nfc1 = { version = "0.5", optional = true }
pcsc = { version = "2.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uniffi = { version = "0.26.1", optional = true }
dummy-uniffi = { path = "../dummy-uniffi" }

android_logger = { version = "0.13.3", optional = true }
env_logger = { version = "0.10", optional = true }

wasm-bindgen = { version = "=0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

model = { path = "../model" }

[features]
cli-common = ["env_logger", "tokio"]
cli = ["nfc1", "cli-common"]
cli-pcsc = ["pcsc", "cli-common"]
bindings = ["uniffi", "uniffi/cli", "debug"] # Binings needs the debug port enabled because the method cannot be conditionally removed under uniffi
android = ["android_logger"]
ios = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "getrandom"]
debug = ["model/emulator"]

[[bin]]
name = "cli"
required-features = ["cli"]
[[bin]]
name = "pcsc"
required-features = ["cli-pcsc"]


[[bin]]
name = "uniffi-bindgen"
required-features = ["bindings"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false